--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -59,9 +59,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="onEditing:" destination="BYZ-38-t0r" eventType="editingChanged" id="1bz-Dm-L1c"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n4I-rA-vVL">
                                 <rect key="frame" x="37.5" y="268.5" width="300" height="30"/>
@@ -187,9 +184,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="onPHidden2:" destination="g8g-qU-Gr4" eventType="editingChanged" id="mDV-xn-3hl"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u5v-EM-DfC">
                                 <rect key="frame" x="37.5" y="358.5" width="300" height="30"/>
@@ -198,10 +192,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="onPHidden:" destination="g8g-qU-Gr4" eventType="editingChanged" id="ZUF-V5-uQb"/>
-                                </connections>
+                                <textInputTraits key="textInputTraits" smartDashesType="yes"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oK6-BQ-3yo">
                                 <rect key="frame" x="37.5" y="288.5" width="300" height="30"/>
@@ -613,7 +604,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimal-minimalist-nature-sunrise-river-mountains-trees-8k-wallpaper-1024x576" translatesAutoresizingMaskIntoConstraints="NO" id="1rf-PH-Jx6">
-                                <rect key="frame" x="79" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="-245.5" y="0.0" width="1024" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="gHO-ek-NZd">
                                 <rect key="frame" x="16" y="80" width="150" height="150"/>
